2004-01-08 Sivaiah Nallagatla <snallagatla@novell.com>

	* providers/Makefile.am : add groupwise to SUBDIRS 
	* providers/groupwise/camel-groupwise-provider.c: new camel provider for groupwise 
	* providers/groupwise/groupwise-config-listener.[ch] : new class to add e-sources for groupwise calender and tasks 
	* providers/groupwise/Makefile.am : added new files to Makefile.am  
	 

2004-01-05  JP Rosevear <jpr@ximian.com>

	* camel-utf8.c: include sys/types.h for freebsd

2004-01-05  Rodrigo Moya <rodrigo@ximian.com>

	* providers/groupwise/camel-groupwise-provider.c (groupwise_url_hash,
	groupwise_url_equal): renamed from imap_*.

2004-01-05  Not Zed  <NotZed@Ximian.com>

	* camel-tcp-stream-raw.c (socket_connect): check the right return
	of the socket call, dont set fd to the value of the -1 check!

2003-12-27  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-tcp-stream-raw.c (socket_connect): Save errno and check
	the return of the socket() call.

2003-12-24  Rodrigo Moya <rodrigo@ximian.com>

	* providers/groupwise/camel-groupwise-provider.c
	(camel_provider_module_init): g_module_open the other providers we
	depend on to avoid load ordering problems.

2003-12-22  Rodrigo Moya <rodrigo@ximian.com>

	* providers/groupwise/camel-groupwise-provider.c: removed useless
	configuration options, and added other options from the IMAP
	provider.
	(camel_provider_module_init): register a SMTP transport object
	also, and removed SASL registration, since we don't support it.

2003-12-19  Sivaiah Nallagatla <snallagatla@novell.com>

	* providers/groupwise/Makefile.am:
	* providers/groupwise/libcamelgroupwise.urls:
	* providers/groupwise/camel-groupwise-provider.c: added Camel
	provider for Groupwise accounts, based on the IMAP one.

2003-12-11  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_ctx_parse_status): Don't immediately
	prompt for a passwd after receiving the NEED_PASSPHRASE status
	message. Instead, parse the userid that gpg needs a passwd for and